--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,8 @@ fastapi==0.116.1
 uvicorn==0.35.0
 Jinja2==3.1.6
 python-multipart==0.0.20
+
+# Testing dependencies
+pytest==7.4.3
+pytest-asyncio==0.21.1
+pytest-cov==4.1.0
