--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,7 @@ python-multipart==0.0.20
 pytest==7.4.3
 pytest-asyncio==0.21.1
 pytest-cov==4.1.0
+httpx==0.25.2
+
+# Build dependencies
+pyinstaller==6.15.0
