--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,7 +41,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./dist/bloatware_remover-${{ github.event.inputs.tag }}
-          asset_name: your_executable_name
+          asset_path: ./dist/bloatware_remover
+          asset_name: bloatware_remover
           asset_content_type: application/octet-stream
 
