--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,9 +10,14 @@ on:
 
 jobs:
   build-exe:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ ubuntu-latest, windows-latest, macos-latest ]
+
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
+        name: Checkout repository
       - name: Set up Python 3.11
         uses: actions/setup-python@v5
         with:
@@ -21,27 +26,51 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      - name: Make build_exe.sh executable
-        run: chmod +x build_exe.sh
-      - name: Build executable with PyInstaller
-        run: ./build_exe.sh
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Make executable
+        run: pyinstaller bloatware_remover.spec
+      - name: Rename executable
+        run: |
+          if [ "${{ matrix.os }}" == "windows-latest" ]; then
+            mv dist/bloatware-remover dist/bloatware-remover-windows.exe
+          elif [[ "$RUNNER_OS" == "Linux" ]]; then
+            mv dist/bloatware-remover dist/bloatware-remover-linux
+          elif [[ "$RUNNER_OS" == "macOS" ]]; then
+            mv dist/bloatware-remover dist/bloatware-remover_macos
+          fi
+        shell: bash
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
         with:
-          tag_name: ${{ github.event.inputs.tag }}
-          release_name: Release ${{ github.event.inputs.tag }}
+          name: app-${{ matrix.os }}
+          path: dist/*
+
+  release:
+    needs: build-exe
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Download all build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          merge-multiple: true
+
+      - name: List downloaded files (Debugging)
+        run: ls -R
+
+      - name: Make files executable (Linux/Mac)
+        run: chmod +x app-* || true
+
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: ${{ github.event.inputs.version }}
+          name: Release ${{ github.event.inputs.version }}
           draft: false
           prerelease: false
-      - name: Upload Release Asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./dist/bloatware_remover
-          asset_name: bloatware_remover
-          asset_content_type: application/octet-stream
-
+          files: |
+            app-linux
+            app-windows.exe
+            app-macos
