--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,8 +21,15 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install -r dev-requirements.txt
         pip install -r tests/test-requirements.txt
+    - name: Lint (ruff)
+      run: |
+        ruff check .
+    - name: Format check (black)
+      run: |
+        black --check .
     - name: Run tests with pytest
       run: |
-        pytest
+        pytest  --maxfail=1 --disable-warnings -q
 
