Added Changelog for version v1.0.0

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -68,6 +68,7 @@ jobs:
         with:
           tag_name: ${{ github.event.inputs.tag }}
           name: Release ${{ github.event.inputs.tag }}
+          body_path: CHANGELOG.md
           draft: false
           prerelease: false
           files: |
